--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -24,23 +24,19 @@
       <mat-card>
         <img src="{{eve.imageurl}}" />
         <span>
-            <p>id : {{eve.id}}</p>
+            <p>Id : {{eve.id}}</p>
           </span>
           <span>
-            <p>name :{{eve.name}}</p>
+            <p>Name :{{eve.name}}</p>
           </span>
           <span>
-            <p>detail :{{eve.detail}}</p>
+            <p>Email :{{eve.email}}</p>
           </span>
           <span>
-            <p>price :{{eve.price}}</p>
+            <p>Detail:{{eve.detail}}</p>
           </span>
-          <span>
-            <p>rating :{{eve.rating}}</p>
-          </span>
-          <span>
-            <p>category :{{eve.category}}</p>
-          </span>
+         
+         
        
        
         
