--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,6 +43,7 @@
 
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav">
+          <img src="../assets/Image/capgemini1_logo.png" style="width:114px; height: 46px;"> &nbsp;
           <Li><a routerLink="/">Login</a></Li>&nbsp;&nbsp;
             <Li><a routerLink="/Homepage">Homepage</a></Li>&nbsp;&nbsp;
             <li><a routerLink="/About Us">About Us</a></li>&nbsp;&nbsp;
